# MyVideoExplorer

./: .gitignore  LICENSE  README.md  main.spec  pylock.toml  pyproject.toml
.junie/: AGENTS.md
cfg/: defaults_app.json  defaults_filter.json  defaults_media.json  defaults_state.json  defaults_ui.json
doc/: README.md  changelog.md  development.md  python-best-practices.agent.md  quick-context.agent.md
src/: main.py
src/MyVideoExplorer/: main.py
src/app/: app.py  app_container.py  app_controller.py  app_signals.py  app_state.py
src/file_list/: file_list.py  file_list_view.py
src/folder_filter/: folder_filter.py  folder_filter_filter.py  folder_filter_genre_combo_widget.py  folder_filter_media.py  folder_filter_table.py
src/folder_list/: folder_list.py  folder_list_controller.py  folder_list_view.py
src/folder_nav/: folder_filter_media.py  folder_filter_table.py  folder_nav.py  folder_nav_filters.py  folder_nav_filters_filter.py  nav_button.py
src/image_list/: image_label.py  image_list.py  image_list_view.py  image_preview_widget.py  image_title_widget.py
src/media_info/: media_info.py  media_info_actors_section.py  media_info_common_section.py  media_info_details_section.py  media_info_id_link_formatter.py  media_info_plot_section.py  media_info_scroll_content_widget.py  media_info_side_view.py  media_info_toolbar_widget.py  media_info_view.py
src/media_info_section/: media_info_section_actors.py  media_info_section_common.py  media_info_section_details.py  media_info_section_plot.py
src/media_info_side/: media_info_side_content_widget.py  media_info_side_facts_widget.py  media_info_side_header_widget.py  media_info_side_view.py
src/media_info_tabs/: media_info_tabs.py
src/media_tabs/: media_tabs.py
src/settings/: settings.py  settings_app_tab.py  settings_base_tab.py  settings_filter_tab.py  settings_media_tab.py  settings_state.py  settings_ui_tab.py
src/theme/: manager.py  models.py  styles.py  theme.py
src/utils/: file_util.py  file_util_type.py  file_util_worker.py  json_util.py  log_util.py  nfo_parse_util.py  str_util.py
src/video_player/: video_finder.py  video_launcher.py  video_player.py
src/widgets/: base_widget.py  collapsible_box_widget.py  folder_picker_widget.py  label_angled_widget.py  label_value_widget.py  right_aligned_tab_bar.py  simple_table_model.py  simple_table_widget.py
test/: conftest.py
test/app/: test_app_controller.py
test/file_list/: test_file_list.py
test/folder_filter/: test_folder_filter.py  test_folder_filter_filter.py  test_folder_filter_media_update.py
test/folder_list/: test_folder_list.py  test_folder_list_icons.py  test_folder_list_random.py
test/folder_nav/: test_folder_nav.py  test_folder_nav_filters.py  test_folder_nav_filters_filter.py
test/image_list/: test_image_label.py  test_image_list.py  test_image_list_view.py  test_image_preview.py
test/media_info/: test_media_info.py  (+3 more)
(+84 files in other folders)
