[build-system]
requires = ["setuptools~=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MyVideoExplorer"
version = "0.0.1"
description = "MyVideoExplorer"
readme = "README.md"
requires-python = "~=3.14"
dependencies = [
    "PySide6~=6.11.1",
    "qtawesome~=1.4.2",
    "psutil~=7.2.2",
]

[project.optional-dependencies]
dev = [
    # Linting and formatting
    "ruff~=0.15.20",
    "ty~=0.0.61",
    # Testing
    "pytest~=9.1.1",
    "pytest-qt~=4.5.0",
    "pytest-cov~=7.1.0",
    "pytest-asyncio~=1.4.0",
    # Additional quality tools
    "isort~=8.0.1",
    "platformdirs~=4.10.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "C4", "UP"]
ignore = ["E501"]

[tool.ty.src]
include = ["src", "test"]

[tool.ty.rules]
unresolved-attribute = "warn"
unresolved-import = "warn"
division-by-zero = "error"
deprecated = "warn"
unused-ignore-comment = "warn"
possibly-missing-import = "error"

[tool.ty.analysis]
allowed-unresolved-imports = ["test.**"]

[tool.pytest.ini_options]
minversion = "9.1"
addopts = "-ra -q --strict-markers"
pythonpath = ["src"]
testpaths = ["test"]
norecursedirs = [
    ".git",
    ".venv",
    "__pycache__"
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
]
qt_api = "pyside6"

[tool.setuptools.packages.find]
where = ["."]
